@@ -64,6 +64,7 @@ public enum Default {
     APPLICATION_ADMIN_ROUTES("false"),
     APPLICATION_ADMIN_SYSTEM("false"),
     APPLICATION_ADMIN_METRICS("false"),
+    APPLICATION_ADMIN_MEMORY("false"),
     APPLICATION_ADMIN_SCHEDULER("false"),
     AUTH_COOKIE_ENCRYPT("false"),
     AUTH_COOKIE_VERSION("0"),
