@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Application configuration</title>
+    <title>Application properties</title>
     <style><#include "css/skeleton.min.css"></style>
   <body>
     <div class="container">
