@@ -62,6 +62,7 @@ test:
               routes     : true
               system     : true              
               metrics    : true
+              memory     : true              
               scheduler  : true
               username   : admin
               password   : c7ad44cbad762a5da0a452f9e854fdc1e0e7a52a38015f23f3eab1d80b931dd472634dfac71cd34ebc35d16ab7fb8a90c81f975113d6c7538dc69dd8de9077ec   
@@ -76,6 +77,7 @@ dev:
               health     : true
               config     : true
               cache      : true
+              memory     : true              
               system     : true                  
               routes     : true
               metrics    : true  
