@@ -5,6 +5,7 @@
 [small]#Released at xx.xx.xxxx#
 
 * https://github.com/svenkubiak/mangooio/issues/94[#94] Added new @system administrative URL (svenkubiak)
+* https://github.com/svenkubiak/mangooio/issues/94[#95] Added new @memory administrative URL (svenkubiak)
 
 == Version 2.0.2
 
